--- a/ansible_script/worker_cluster.yml
+++ b/ansible_script/worker_cluster.yml
@@ -5,16 +5,19 @@
     - name: get join command
       shell: kubeadm token create --print-join-command
       register: join_command_raw
+    
+    - debug:
+        msg: "{{ join_command_raw.stdout }}"
 
     - name: set join command
       set_fact:
         join_command: "{{ join_command_raw.stdout_lines[0] }}"
 
-- hosts: Kubernetes_worker
+- hosts: Kubernetes_Worker
   become: yes
   tasks:
     - name: join cluster
-      shell: "{{ hostvars['DUMMY_HOST'].join_command }} >> node_joined.txt"
+      shell: "{{ hostvars['Kubernetes_Master'].join_command }} >> node_joined.txt"
       args:
         chdir: $HOME
         creates: node_joined.txt
